--- a/views/sanpham/add_san_pham.ejs
+++ b/views/sanpham/add_san_pham.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../stylesheets/sidebar.css">
 
 </head>
+
 <body>
     <div class="wrapper">
         <%- include('../inc/sidebar') %>
@@ -109,8 +110,7 @@
                                 </div>
                             </div>
                             <!-- Mô tả -->
-                            <label for="moTa" class="form-label">Mô tả <span
-                                class="text-danger">(*)</span></label>
+                            <label for="moTa" class="form-label">Mô tả <span class="text-danger">(*)</span></label>
                             <textarea class="form-control" id="moTa" name="moTa" rows="2"></textarea>
                             <div class="row mt-2">
                                 <div class="col col-md-2">
@@ -282,7 +282,6 @@
                 }
 
                 const data = await response.json();
-                console.log('Success:', data);
                 window.location.href = '/san-pham';
             } catch (error) {
                 console.error('Error:', error);
