--- a/views/inc/sidebar.ejs
+++ b/views/inc/sidebar.ejs
@@ -52,13 +52,13 @@
                 </a>
                 <ul id="posts" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                     <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Post 1</a>
+                        <a href="/thong-ke/Doanh-thu" class="sidebar-link">Doanh thu</a>
                     </li>
                     <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Post 2</a>
+                        <a href="/thong-ke/San-pham" class="sidebar-link">Sản phẩm</a>
                     </li>
                     <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">Post 3</a>
+                        <a href="/thong-ke/Khac" class="sidebar-link">Khác</a>
                     </li>
                 </ul>
             </li>
