--- a/views/thongke/sanpham.ejs
+++ b/views/thongke/sanpham.ejs
@@ -10,17 +10,43 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="../stylesheets/sidebar.css">
   </head>
-  <body>
+  <body style="background-color: white;">
     <div class="wrapper">
       <%- include('../inc/sidebar') %>
       <div class="main"> 
         <%- include('../inc/header') %>
       <div class="content col-md-10 sm-10">
-        <h1>Chu Đình Hiếu</h1>
+        <% var data = [10, 20, 30, 40, 50, 62]; %>
+        <div>
+          <canvas id="myChart"></canvas>
+        </div>
+
       </div>
       <%- include('../inc/footer') %>
     </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+      const ctx = document.getElementById('myChart');
+      new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6', "Tháng 7","Tháng 8","Tháng 9"
+          ,"Tháng 9","Tháng 10", "Tháng 11", " Tháng 12"],
+          datasets: [{
+            label: 'Ban được',
+            data: [1.2,3,4,5],
+            borderWidth: 0.5
+          }]
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+        }
+      });
+    </script>
   </body>
 </html>
