--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -14,7 +14,6 @@
   <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="../stylesheets/sidebar.css">
-
 </head>
 
 <body>
@@ -22,10 +21,179 @@
     <%- include('../inc/sidebar') %>
       <div class="main">
         <%- include('../inc/header') %>
-          <h1>Chưa biết hiển thị gì ở HOME</h1>
-          <%- include('../inc/footer') %>
+          <div>
+            <div class="container text-center">
+              <div class="row d-flex flex-nowrap justify-content-center ms-5 me-5">
+                <div class="col-3 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded m-2">
+                  <div class=" d-flex flex-column bg-primary text-light p-1 shadow rounded">
+                    <div class="top d-flex flex-row justify-content-between  ">
+                      <img width="50" height="40" src="/images/chatIcon.png" alt="" srcset="">
+                      <p class="fw-bold">10</p>
+                    </div>
+                    <div class="bot text-end">
+                      <p>Tin nhắn mới</p>
+                    </div>
+                  </div>
+                  <div class="bot text-end ">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                      Xem chi tiết ->
+                    </a>
+                  </div>
+                </div>
+                <div class="col-3 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded m-2">
+                  <div class=" d-flex flex-column bg-success text-light p-1 shadow rounded">
+                    <div class="top d-flex flex-row justify-content-between  ">
+                      <img width="50" height="40" src="/images/donIcon.png" alt="" srcset="">
+                      <p class="fw-bold">10</p>
+                    </div>
+                    <div class="bot text-end">
+                      <p>Đơn hàng mới</p>
+                    </div>
+                  </div>
+                  <div class="bot text-end ">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                      Xem chi tiết ->
+                    </a>
+                  </div>
+                </div>
+                <div class="col-3 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded m-2">
+                  <div class=" d-flex flex-column bg-primary text-light p-1 shadow rounded">
+                    <div class="top d-flex flex-row justify-content-between  ">
+                      <img width="50" height="40" src="/images/usericon.png" alt="" srcset="">
+                      <p class="fw-bold">10</p>
+                    </div>
+                    <div class="bot text-end">
+                      <p>Người dùng</p>
+                    </div>
+                  </div>
+                  <div class="bot text-end ">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                      Xem chi tiết ->
+                    </a>
+                  </div>
+                </div>
+                <div class="col-3 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded m-2">
+                  <div class=" d-flex flex-column bg-success text-light p-1 shadow rounded">
+                    <div class="top d-flex flex-row justify-content-between  ">
+                      <img width="50" height="40" src="/images/doanhThuIcon.png" alt="" srcset="">
+                      <p class="fw-bold">10</p>
+                    </div>
+                    <div class="bot text-end">
+                      <p>Doanh Thu</p>
+                    </div>
+                  </div>
+                  <div class="bot text-end ">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                      Xem chi tiết ->
+                    </a>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <!-- noidung chinh -->
+          <div class="content">
+            <div class="row d-flex flex-nowrap m-5 justify-content-center ">
+               <!-- thong ke hang -->
+              <div class="col-4 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded  p-4">
+                 <h3 class="border-bottom text-center text-primary fw-bold">Thống kê đơn hàng</h3>
+                 <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                      Chờ xác nhận ->
+                    </a>
+                    <p class="fw-bold">10</p>
+                 </div>
+                 <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                  <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    Chờ giao ->
+                  </a>
+                    <p class="fw-bold">10</p>
+                 </div>
+                 <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                  <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    Đang giao ->
+                  </a>
+                  <p class="fw-bold">10</p>
+                 </div>
+                 <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                  <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    Đã giao ->
+                  </a>
+                    <p class="fw-bold">10</p>
+                 </div>
+                 <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                  <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    Đã hủy ->
+                  </a>
+                  <p class="fw-bold">10</p>
+                 </div>
+              </div>
+             
+             <!-- thong ke app -->
+             <div class="col-4 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded ms-4 p-4">
+              <h3 class="border-bottom text-center text-primary fw-bold">Thống kê App</h3>
+              <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                 Tổng thành viên ->
+                </a>
+                 <p class="fw-bold">10</p>
+              </div>
+              <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  Tổng sản phẩm ->
+                </a>
+                 <p class="fw-bold">10</p>
+              </div>
+              <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  Tổng hãng ->
+                </a>
+               <p class="fw-bold">10</p>
+              </div>
+              <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                 Tổng khuyến mãi ->
+                </a>
+                 <p class="fw-bold">10</p>
+              </div>
+              <div class="d-flex flex-row justify-content-between border-bottom p-1">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  Tổng đánh giá ->
+                </a>
+               <p class="fw-bold">10</p>
+              </div>
+           </div>
+           <!-- thong ke ngày -->
+           <div class="col-4 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded ms-4 p-4">
+            <h3 class="border-bottom text-center text-primary fw-bold">Thống kê Ngày</h3>
+            <div class="d-flex flex-row justify-content-between border-bottom p-1">
+              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                Doanh thu ->
+              </a>
+               <p class="fw-bold">10</p>
+            </div>
+            <div class="d-flex flex-row justify-content-between border-bottom p-1">
+              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+               Đơn hàng <br> chờ xác nhận ->
+              </a>
+               <p class="fw-bold">10</p>
+            </div>
+            <div class="d-flex flex-row justify-content-between border-bottom p-1">
+              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                Đơn hàng <br> giao thành công ->
+              </a>
+             <p class="fw-bold">10</p>
+            </div>
+            <div class="d-flex flex-row justify-content-between border-bottom p-1">
+              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+               Thành viên mới ->
+              </a>
+               <p class="fw-bold">10</p>
+            </div>
+         </div>
+            </div>
+          </div>
       </div>
-
+      <%- include('../inc/footer') %>
   </div>
 
 
