--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -3,7 +3,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse navbar">
-    <h1><%= title %></h1>
+    <h4 style="margin-top: 10px; margin-left:40%;"><%= title %></h4>
      <% if (user) {%>
         <ul class="navbar-nav">
             <p class="nav-name-user" ><%= user.taiKhoan %></p>
