--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -91,13 +91,13 @@ a.sidebar-link {
     display: block;
     font-size: 0.875rem;
 }
-a.sidebar-link:focus {
+/* a.sidebar-link:focus {
     padding: .625rem 1.625rem;
     color:black;
     position: relative;
     display: block;
     font-size: 0.875rem;
-}
+} */
 
 
 
@@ -117,6 +117,9 @@ a.sidebar-link:focus {
 .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
     transform: rotate(45deg);
     transition: all .2s ease-out;
+}
+.a-thongke{
+    margin-left: 5%;
 }
 
 .avatar {
