--- a/views/thongke/doanhthu.ejs
+++ b/views/thongke/doanhthu.ejs
@@ -29,7 +29,7 @@
               </ul>
           </div>
           <div>
-              <canvas id="myChart" style="background-color: white;"></canvas>
+              <canvas id="myChart" style="background-color: white; width: 100%;"></canvas>
           </div>
           <div class="mt-2">
                   <% let totalRevenue = 0; %>
