--- a/views/thongke/sanpham.ejs
+++ b/views/thongke/sanpham.ejs
@@ -1,52 +1,120 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='../stylesheets/style_header.css' />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <link rel='stylesheet' href='/stylesheets/style_header.css' />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../stylesheets/sidebar.css">
-  </head>
-  <body style="background-color: white;">
-    <div class="wrapper">
-      <%- include('../inc/sidebar') %>
-      <div class="main"> 
+  <link rel="stylesheet" href="/stylesheets/sidebar.css">
+</head>
+
+<body style="background-color: white;">
+  <div class="wrapper">
+    <%- include('../inc/sidebar') %>
+      <div class="main">
         <%- include('../inc/header') %>
-      <div class="content col-md-10 sm-10">
-        <% var data = [10, 20, 30, 40, 50, 62]; %>
-        <div>
-          <canvas id="myChart"></canvas>
-        </div>
+
+          <div class="content col-md-10 sm-10" style="margin: 0 20px;">
+            <div class="row" style="height: 150px; margin: 20px 0; justify-content: space-around;">
+              <div class="" style="background-color: white; height: 100%; width: 20%; border-radius: 20px; ">
+               <img src="https://cdn-icons-png.flaticon.com/128/2821/2821858.png" alt="" width="50" height="50" srcset="">
+                  <a href=""><%= kho %></a>
+              </div>
+
+              <div class="" style="background-color: black; height: 100%; width: 20%;  border-radius: 20px; ">
+
+              </div>
+
+              <div class="" style="background-color: black; height: 100%; width: 20%;  border-radius: 20px; ">
+
+              </div>
+
+              <div class="" style="background-color: black; height: 100%; width: 20%;  border-radius: 20px; ">
+
+              </div>
+             
+              
+
+          </div>
+
+          <div class="w-100">
+            <div class="dropdown mb-1 w-100">
+              <button class="btn btn-light w-100 text-start" type="button" id="dropdownMenuButton"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <%= year %>
+              </button>
+              <ul class="dropdown-menu m-2" aria-labelledby="dropdownMenuButton"
+                style="background-color: white; width: 100vw;">
+                <li><a class="dropdown-item" href="/thong-ke/thongke-sanpham/<%= 2024%>"
+                    onclick="changeText('<%= 2024 %>')">2024</a></li>
+                <li><a class="dropdown-item" href="/Thong-ke/thongke-sanpham/<%= 2024 - 1 %>"
+                    onclick="changeText('<%= 2024 - 1 %>')">
+                    <%= 2024 - 1 %>
+                  </a></li>
+                <li><a class="dropdown-item" href="/Thong-ke/thongke-sanpham/<%= 2024 - 2 %>"
+                    onclick="changeText('<%= 2024 - 2 %>')">
+                    <%= 2024 - 2 %>
+                  </a></li>
+                <li><a class="dropdown-item" href="/Thong-ke/thongke-sanpham/<%= 2024 - 3 %>"
+                    onclick="changeText('<%= 2024 - 3 %>')">
+                    <%= 2024 - 3 %>
+                  </a></li>
+                <li><a class="dropdown-item" href="/Thong-ke/thongke-sanpham/<%= 2024 - 4 %>"
+                    onclick="changeText('<%= 2024 - 4 %>')">
+                    <%= 2024 - 4 %>
+                  </a></li>
+              </ul>
+            </div>
+            <canvas class="w-100 " style="background-color: white;" id="myChart"></canvas>
+
+          </div>
+
+
+
 
       </div>
       <%- include('../inc/footer') %>
-    </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-      const ctx = document.getElementById('myChart');
-      new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6', "Tháng 7","Tháng 8","Tháng 9"
-          ,"Tháng 9","Tháng 10", "Tháng 11", " Tháng 12"],
-          datasets: [{
-            label: 'Ban được',
-            data: [1.2,3,4,5],
-            borderWidth: 0.5
-          }]
+  </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    const ctx = document.getElementById('myChart');
+
+    new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6', "Tháng 7", "Tháng 8", "Tháng 9"
+          , "Tháng 9", "Tháng 10", "Tháng 11", " Tháng 12"],
+        datasets: [{
+          label: 'Số Lượng Sản Phẩm Bán Được',
+          data: <%= JSON.stringify(dataSp) %>,
+          borderWidth: 0.5
         },
-        options: {
-          scales: {
-            y: {
-              beginAtZero: true
-            }
-          }
+
+        ]
+      },
+      options: {
+        animation: 3000,
+        scales: {
+          y: {
+            beginAtZero: true,
+          },
+
+
         }
-      });
-    </script>
-  </body>
+      }
+    });
+
+    function changeText(selectedYear) {
+      document.getElementById("dropdownMenuButton").textContent = selectedYear;
+    }
+  </script>
+</body>
+
 </html>
