--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -26,7 +26,7 @@
                          <img src="/images/profile.jpg" class="avatar img-fluid rounded" alt="">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end">
-                    <a href="#" class="dropdown-item">Login</a>
+                    <a href="/" class="dropdown-item">Login</a>
                 </div>
             </li>
         </ul>
