--- a/views/thongbao/home_thongbao.ejs
+++ b/views/thongbao/home_thongbao.ejs
@@ -1,26 +1,203 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='../stylesheets/style_header.css' />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <link rel='stylesheet' href='../stylesheets/style_header.css' />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="../stylesheets/sidebar.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <%- include('../inc/sidebar') %>
-      <div class="main"> 
-        <%- include('../inc/header') %>
-      <div class="content col-md-10 sm-10">
-        <h1>Chu Đình Hiếu</h1>
-      </div>
-      <%- include('../inc/footer') %>
-    </div>
-    </div>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-  </body>
+    .notifications .toast {
+      position: fixed;
+      top: 30px;
+      right: 20px;
+      padding: 10px;
+      margin-bottom: 10px;
+      color: #fff;
+      width: 400px;
+      display: grid;
+      grid-template-columns: 70px 1fr 70px;
+      border-radius: 5px;
+      --color: #0abf30;
+      background-image: linear-gradient(to right, #0abf3055, #22242F 30%);
+      animation: show_toast 0.3s ease forwards;
+    }
+
+    .notifications .toast i {
+      color: var(--color);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: x-large;
+    }
+
+    .notifications .toast .title {
+      font-size: x-large;
+      font-weight: bold;
+    }
+
+    .notifications .toast span,
+    .notifications .toast .close {
+      opacity: 0.6;
+      color: #fff;
+    }
+
+    @keyframes show_toast {
+      0% {
+        transform: translateX(100%);
+      }
+
+      40% {
+        transform: translateX(-5%);
+      }
+
+      80% {
+        transform: translateX(0%);
+      }
+
+      100% {
+        transform: translateX(-10%);
+      }
+    }
+
+    .notifications .toast::before {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: var(--color);
+      box-shadow: 0 0 10px var(--color);
+      content: '';
+      width: 100%;
+      height: 3px;
+      animation: timeOut 3s linear 1 forwards;
+    }
+
+    @keyframes timeOut {
+      to {
+        width: 0%;
+      }
+    }
+  </style>
+  <script>
+    // JavaScript
+    let notificationSent = false; // Biến để lưu trạng thái gửi thông báo
+
+    function validateForm() {
+      var tieu_de = document.getElementById("tieu_de").value;
+      var noi_dung = document.getElementById("noi_dung").value;
+
+      // Kiểm tra xem cả hai trường đều không được để trống và có độ dài từ 8 đến 30 ký tự
+      if (tieu_de.trim() === "" || noi_dung.trim() === "") {
+        alert("Vui lòng điền đầy đủ thông tin");
+        return false;
+      } else if (tieu_de.length < 8 || tieu_de.length > 30 || noi_dung.length < 8 || noi_dung.length > 30) {
+        alert("Tiêu đề và nội dung phải có từ 8 đến 30 ký tự");
+        return false;
+      }
+      return true;
+    }
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.querySelector('form');
+
+      form.addEventListener('submit', handleSubmit);
+    });
+
+    async function handleSubmit(event) {
+      event.preventDefault(); // Ngăn chặn việc gửi yêu cầu mặc định của trình duyệt
+      if (!validateForm()) {
+        return; // Nếu dữ liệu không hợp lệ, không gọi API
+      }
+      // Lấy dữ liệu từ form
+      const tieu_de = document.getElementById("tieu_de").value;
+      const noi_dung = document.getElementById("noi_dung").value;
+
+      try {
+        // Gửi yêu cầu POST đến máy chủ
+        const response = await fetch('/thong-bao/', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ tieu_de, noi_dung })
+        });
+
+        if (!response.ok) {
+          throw new Error('Error sending notification');
+        }
+
+        // Chuyển đổi phản hồi từ máy chủ sang JSON
+        const responseData = await response.json();
+
+        // Hiển thị thông báo dạng toast nếu gửi thông báo thành công
+        if (responseData.success) {
+          document.getElementById("tieu_de").value = "";
+          document.getElementById("noi_dung").value = "";
+          // Tạo một thông báo mới
+          const toast = document.createElement('div');
+          toast.classList.add('toast', 'success');
+
+          toast.innerHTML = `
+          <i class="fa-solid fa-circle-check"></i>
+          <div class="content">
+            <div class="title">Thông báo</div>
+            <span>Gửi thông báo thành công</span>
+          </div>
+          <i class="close fa-solid fa-xmark" onclick="(this.parentElement).remove()"></i>
+        `;
+
+          // Thêm thông báo vào DOM
+          document.querySelector('.notifications').appendChild(toast);
+
+          // Ẩn thông báo sau 3 giây
+          setTimeout(() => {
+            toast.remove();
+          }, 3000);
+        } else {
+          // Hiển thị thông báo lỗi nếu gửi thông báo không thành công
+          alert(responseData.message);
+        }
+      } catch (error) {
+        alert('Error sending notification');
+      }
+    }
+  </script>
+</head>
+
+<body>
+  <div class="wrapper">
+    <%- include('../inc/sidebar') %>
+      <div class="main">
+        <%- include('../inc/header') %>
+          <div class="content col-md-10 sm-10">
+            <form action="/thong-bao/" method="post" onsubmit="return validateForm()">
+              <div class="mb-3">
+                <label for="title" class="form-label">Tiêu đề:</label>
+                <input type="text" class="form-control" id="tieu_de" name="tieu_de">
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label">Nội dung:</label>
+                <textarea class="form-control" id="noi_dung" name="noi_dung" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Xác
+                nhận</button>
+            </form>
+            <div class="notifications">
+
+            </div>
+          </div>
+          <%- include('../inc/footer') %>
+      </div>
+  </div>
+
+</body>
+
 </html>
